<fix>corrections alignements menus pages

--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ a {
 .BlocMenu .BlocEntrees {
   width: 100%;
   height: 30%;
-  margin-top: 35px;
+  margin-top: 0px;
 }
 @media screen and (min-width: 992px) {
   .BlocMenu .BlocEntrees {
@@ -475,17 +475,18 @@ a {
   }
 }
 .BlocMenu .BlocEntrees__title {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 400;
   text-transform: uppercase;
   width: 40px;
   border-bottom: 3px solid #99e2d0;
-  margin: 0px;
+  margin-bottom: 25px;
   padding-bottom: 5px;
 }
 .BlocMenu .BlocPlats {
   width: 100%;
   height: 30%;
-  margin-top: 35px;
+  margin-top: 0px;
 }
 @media screen and (min-width: 992px) {
   .BlocMenu .BlocPlats {
@@ -494,17 +495,19 @@ a {
   }
 }
 .BlocMenu .BlocPlats__title {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 400;
   text-transform: uppercase;
   width: 40px;
   border-bottom: 3px solid #99e2d0;
-  margin: 0px;
+  margin-bottom: 25px;
   padding-bottom: 5px;
 }
 .BlocMenu .BlocDesserts {
   width: 100%;
   height: 30%;
-  margin-top: 35px;
+  margin-top: 0px;
+  margin-bottom: 25px;
 }
 @media screen and (min-width: 992px) {
   .BlocMenu .BlocDesserts {
@@ -513,11 +516,12 @@ a {
   }
 }
 .BlocMenu .BlocDesserts__title {
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 400;
   text-transform: uppercase;
   width: 40px;
   border-bottom: 3px solid #99e2d0;
-  margin: 0px;
+  margin-bottom: 25px;
   padding-bottom: 5px;
 }
 
@@ -543,11 +547,12 @@ a {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  padding: 0px 25px;
+  padding: 10px 25px 0px 25px;
 }
 .headerMenu .headerMenu__returnHome {
   width: 25%;
-  font-size: 24px;
+  font-size: 18px;
+  font-weight: bolder;
 }
 .headerMenu .headerMenu__logo {
   height: 50%;
@@ -652,6 +657,7 @@ a {
 .form__result-button {
   height: 50px;
   width: 220px;
+  margin-bottom: auto;
   background: linear-gradient(to top, #9356dc, #ff79d9);
   border: 0px solid;
   border-radius: 30px;
@@ -790,7 +796,7 @@ a {
 .Menucard {
   width: 100%;
   height: 67px;
-  margin-top: 20px;
+  margin-top: 15px;
   background-color: #fff;
   border-radius: 15px;
   box-shadow: 4px 4px 4px #cfcfcf;
