--- a/sass/abstracts/mixins.scss
+++ b/sass/abstracts/mixins.scss
@@ -1,14 +1,15 @@
 @mixin miseenformetitreblocplat {
-	font-size: $font-size-S;
+	font-size: $font-size-M;
+	font-weight: $font-weight-medium;
 	text-transform: uppercase;
 	width: 40px;
 	border-bottom: 3px solid $third-color;
-	margin: 0px;
+	margin-bottom: 25px;
 	padding-bottom: 5px;
 }
 
 @mixin layoutblocsmenus {
 	width: 100%;
 	height: 30%;
-	margin-top: 35px;
+	margin-top: 0px;
 }
