--- a/sass/components/cards.scss
+++ b/sass/components/cards.scss
@@ -70,7 +70,7 @@
 .Menucard {
 	width: 100%;
 	height: 67px;
-	margin-top: 20px;
+	margin-top: 15px;
 	background-color: $background-alt-1;
 	border-radius: 15px;
 	box-shadow: 4px 4px 4px $background-alt-4;
