--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -18,10 +18,11 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	align-items: center;
-	padding: 0px 25px;
+	padding: 10px 25px 0px 25px;
 	.headerMenu__returnHome {
 		width: 25%;
-		font-size: $font-size-XL;
+		font-size: $font-size-L;
+		font-weight: bolder;
 	}
 	.headerMenu__logo {
 		height: 50%;
