--- a/sass/pages/menus.scss
+++ b/sass/pages/menus.scss
@@ -59,6 +59,7 @@
 	}
 	.BlocDesserts {
 		@include layoutblocsmenus;
+		margin-bottom: 25px;
 		@include desktop {
 			width: 33%;
 			margin: 0px 10px;
